--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylemsheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="styles.css">
     <title>ToDo List</title>
 </head>
 <body>
     <div class="list-container">
-        <i class="bi bi-journal-text"></i>
         <h1 id="list-heading">My To-Do-List</h1>
         <ul id="list-item">
-            <form id="todo-form">
+            <for id="todo-form">
                 <input type="text" id="input-list" placeholder="My list">
             </form>
         </ul>
